feat: added voice record entry with tests

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -29,5 +29,29 @@
     "passwords_is_weak": "Password is weak, please use a password that has at least 8 letters, one of them in upper case and another one in lowe case, one number and one special character (@#$%^&)",
     "@passwords_is_weak": {},
     "email_not_valid": "Email not valid",
-    "@email_not_valid": {}
+    "@email_not_valid": {},
+    "tap_to_begin_your_voice_recor_entry": "Tap to begin your voice record entry",
+    "@tap_to_begin_your_voice_recor_entry": {},
+    "recording_dots": "Recording...",
+    "@recording_dots": {},
+    "did_you_want_to_save_this_recording": "Did you want to save this recording?",
+    "@did_you_want_to_save_this_recording": {},
+    "are_you_sure": "Are you sure?",
+    "@are_you_sure": {},
+    "this_action_cannot_be_undone": "This action cannot be undone",
+    "@this_action_cannot_be_undone": {},
+    "cancel": "Cancel",
+    "@cancel": {},
+    "delete": "Delete",
+    "@delete": {},
+    "save": "Save",
+    "@save": {},
+    "recording_saved": "Recording saved",
+    "@recording_saved": {},
+    "title": "Title",
+    "@title": {},
+    "tags": "Tags",
+    "@tags": {},
+    "base_on_your_record_we_recommend_these_tags": "Base on your record, we recommend these tags",
+    "@base_on_your_record_we_recommend_these_tags": {}
 }
