feat: added home screen and fix issues with local database

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -53,5 +53,23 @@
     "tags": "Tags",
     "@tags": {},
     "base_on_your_record_we_recommend_these_tags": "Base on your record, we recommend these tags",
-    "@base_on_your_record_we_recommend_these_tags": {}
+    "@base_on_your_record_we_recommend_these_tags": {},
+    "change_language": "Change language",
+    "@change_language": {},
+    "delete_account": "Delete account",
+    "@delete_account": {},
+    "you_must_enter_your_credentials_again_to_delete_your_account": "You must enter your credentials again to delete your account",
+    "@you_must_enter_your_credentials_again_to_delete_your_account": {},
+    "all_data_related_to_this_account_will_be_deleted_and_cannot_be_recovered": "All date related to this account will be deleted and cannot be recovered",
+    "@all_data_related_to_this_account_will_be_deleted_and_cannot_be_recovered": {},
+    "records": "Records",
+    "@records": {},
+    "settings": "Settings",
+    "@settings": {},
+    "you_have_not_added_any_record_yet": "You haven't added any record yet",
+    "@you_have_not_added_any_record_yet": {},
+    "record_entry": "Record entry",
+    "@record_entry": {},
+    "entry": "Entry",
+    "@entry": {}
 }
