feat: added change language page and user preferences

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -71,5 +71,11 @@
     "record_entry": "Record entry",
     "@record_entry": {},
     "entry": "Entry",
-    "@entry": {}
+    "@entry": {},
+    "english": "English",
+    "@english": {},
+    "spanish": "Spanish",
+    "@spanish": {},
+    "change_language_success": "Change language success",
+    "@change_language_success": {}
 }
