feat: edit voice record
- Added navigation to edit voice record.
- Updates voice record locally.
- Create test for these cases.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -91,5 +91,7 @@
     "edit": "Edit",
     "@edit": {},
     "record_details": "Record details",
-    "@record_details": {}
+    "@record_details": {},
+    "record_updated_successfully": "Record updated successfully",
+    "@record_updated_successfully": {}
 }
